[package]
name = "emotibit-data"
version = "0.1.0"
edition = "2021"
authors = ["KENTARO OKUDA <kentaro.okuda@gmail.com>"]
description = "Emotibit DataParser Library"
categories = ["parsing"]
keywords = ["parser", "parsing", "emotibit"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/lonesometraveler/emotibit-data-rs"

[dependencies]
csv = "1.1.6"
anyhow = "1.0"
num = "0.4.0"
tokio = { version = "1.21.2", features = ["full"], optional = true }

[[example]]
name = "udp_server"
required-features = ["tokio"] 